src/test/ui/feature-gates/feature-gate-cfg-target-thread-local.stderr
error[E0658]: `cfg(target_thread_local)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-thread-local.rs:9:16
   |
LL |     #[cfg_attr(target_thread_local, thread_local)]
   |                ^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29594
   = help: add #![feature(cfg_target_thread_local)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
